syntax = "proto3";

option csharp_namespace = "HMS.Notification.gRPC.Protos";

import "google/protobuf/empty.proto";

service SendNotificationService{
	rpc SendNotification(NotificationProtoDto) returns (google.protobuf.Empty);
}

message NotificationProtoDto {
	string title = 1;
	string content = 2;
	string email = 3;
	string b = 4;
}


